# casa-formats-io

./: .gitignore  .readthedocs.yml  CHANGES.rst  LICENSE  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  publish.yml
casa_formats_io/: __init__.py  _casa_chunking.c  casa_dask.py  casa_low_level_io.py  casa_wcs.py  glue_factory.py  table_reader.py  version.py
casa_formats_io/casa_low_level_io/: __init__.py  casa_functions.py  casa_low_level_io.py  core.py  dask_mixin.py  record.py  table.py  utils.py
casa_formats_io/casa_low_level_io/data_managers/: __init__.py  aipsio.py  incremental.py  standard.py  tiled.py
casa_formats_io/casa_low_level_io/tests/: test_casa_low_level_io.py
casa_formats_io/casa_low_level_io/tests/data/simple.ms/: table.f13  table.f14  table.f15  table.f16  table.f2  table.f20  table.f21  table.f22  table.f5  table.f6
casa_formats_io/casa_low_level_io/tests/data/simple.ms/CALDEVICE/: table.f0
casa_formats_io/casa_low_level_io/tests/data/simple.ms/DATA_DESCRIPTION/: table.f0
casa_formats_io/casa_low_level_io/tests/data/simple.ms/FEED/: table.f0  table.f0i
casa_formats_io/casa_low_level_io/tests/data/simple.ms/FIELD/: table.f0  table.f0i
casa_formats_io/casa_low_level_io/tests/data/simple.ms/POINTING/: table.f0  table.f1
casa_formats_io/casa_low_level_io/tests/data/simple.ms/PROCESSOR/: table.f0
casa_formats_io/casa_low_level_io/tests/data/simple.ms/SPECTRAL_WINDOW/: table.f0i
casa_formats_io/casa_low_level_io/tests/data/simple.ms/STATE/: table.f0
casa_formats_io/casa_low_level_io/tests/data/simple.ms/SYSCAL/: table.f0
casa_formats_io/casa_low_level_io/tests/data/simple.ms/SYSPOWER/: table.f0
casa_formats_io/casa_low_level_io/tests/data/simple.ms/WEATHER/: table.f0
casa_formats_io/tests/: test_casa_dask.py  test_casa_low_level_io.py  test_casa_wcs.py  test_glue_factory.py
casa_formats_io/tests/data/simple.ms/: table.f10  table.f11  table.f17  table.f17_TSM1  table.f17_TSM2  table.f18  table.f19  table.f19_TSM0  table.f21_TSM1  table.f22_TSM1  table.f4
casa_formats_io/tests/data/simple.ms/ANTENNA/: table.f0
casa_formats_io/tests/data/simple.ms/CALDEVICE/: table.f0i
casa_formats_io/tests/data/simple.ms/FLAG_CMD/: table.f0
casa_formats_io/tests/data/simple.ms/HISTORY/: table.f0
casa_formats_io/tests/data/simple.ms/OBSERVATION/: table.f0
casa_formats_io/tests/data/simple.ms/POLARIZATION/: table.f0  table.f0i
casa_formats_io/tests/data/simple.ms/SOURCE/: table.f0  table.f0i
casa_formats_io/tests/data/simple.ms/SPECTRAL_WINDOW/: table.f0
casa_formats_io/tests/data/simple.ms/SYSPOWER/: table.f0i
docs/: conf.py  index.rst
