[metadata]
name = casa-formats-io
description = Dask-based reader for CASA data
long_description = file: README.rst
author = Thomas Robitaille, Adam Ginsburg, and Eric Koch
author_email = thomas.robitaille@gmail.com
license = BSD
url = http://casa-formats-io.readthedocs.org
edit_on_github = False
github_project = radio-astro-tools/casa-formats-io

[options]
zip_safe = False
packages = find:
install_requires =
    astropy
    numpy>=1.8.0
    dask[array]
python_requires = >=3.6

[options.extras_require]
test =
    pytest-astropy
    pytest-cov
docs =
    sphinx-astropy

[options.package_data]
casa_formats_io.tests = data/*, data/*/*

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
