[metadata]
name = casa-formats-io
description = Dask-based reader for CASA data
long_description = file: README.rst
author = Thomas Robitaille, Adam Ginsburg, and Eric Koch
author_email = thomas.robitaille@gmail.com
license = BSD
url = http://casa-formats-io.readthedocs.org
edit_on_github = False
github_project = radio-astro-tools/casa-formats-io

[options]
zip_safe = False
packages = find:
install_requires =
    astropy>=4.0
    numpy>=1.17
    dask[array]>=1.0
python_requires = >=3.6

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-openfiles
docs =
    numpydoc
    sphinx-automodapi

[options.package_data]
casa_formats_io.tests = data/*, data/*/*, data/*/*/*, data/*/*/*/*
casa_formats_io.casa_low_level_io.tests = data/*, data/*/*, data/*/*/*, data/*/*/*/*

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled

[coverage:run]
omit =
    casa_formats_io/_astropy_init*
    casa_formats_io/conftest.py
    casa_formats_io/*setup_package*
    casa_formats_io/tests/*
    casa_formats_io/*/tests/*
    casa_formats_io/extern/*
    casa_formats_io/version*
    */casa_formats_io/_astropy_init*
    */casa_formats_io/conftest.py
    */casa_formats_io/*setup_package*
    */casa_formats_io/tests/*
    */casa_formats_io/*/tests/*
    */casa_formats_io/extern/*
    */casa_formats_io/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
